fix: removed shared background between elements because it's buggy in android chrome see https://stackoverflow.com/questions/28532327/background-attachmentfixed-not-working-android-chrome-v40

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -29,12 +29,6 @@ aside {
   flex-flow: column nowrap;
 }
 
-aside, .timeline {
-  // sharing a linear gradient across elements
-  background-image: linear-gradient(to bottom right, $mid-grey 10%, transparent 60%);
-  background-attachment: fixed;
-}
-
 #navigation {
   @media screen and (max-width: $breakpoint-small) {
     display: none;
